--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
   "require": {
     "php": ">=8.1",
     "symfony/framework-bundle": "^6.1",
-    "pjpawel/magis": "0.*"
+    "pjpawel/magis": "0.1.*"
   },
   "require-dev": {
 
@@ -26,7 +26,7 @@
   },
   "autoload-dev": {
     "psr-4": {
-      "Test\\": "tests"
+      "pjpawel\\Magis\\MagisBundle\\Test\\": "tests"
     }
   }
 }
