--- a/composer.json
+++ b/composer.json
@@ -16,17 +16,22 @@
   "require": {
     "php": ">=8.1",
     "symfony/framework-bundle": "^6.1",
-    "pjpawel/magis": "0.1.*"
+    "pjpawel/magis": "0.1.*",
+    "symfony/yaml": "^6.1"
   },
   "require-dev": {
-
+    "phpunit/phpunit": "9.5.*"
   },
   "autoload": {
     "psr-4": { "pjpawel\\Magis\\MagisBundle\\": "src" }
   },
   "autoload-dev": {
     "psr-4": {
-      "pjpawel\\Magis\\MagisBundle\\Test\\": "tests"
+      "pjpawel\\Magis\\MagisBundle\\Test\\": "tests",
+      "pjpawel\\Magis\\Resources\\": "vendor/pjpawel/magis/resources"
     }
+  },
+  "scripts": {
+    "test": "vendor/bin/phpunit ."
   }
 }
