--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "bundle",
     "symfony"
   ],
-  "license": "MIT",
+  "license": "Apache2.0",
   "authors": [
     {
       "name": "Paweł Podgórski",
