--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     "php": ">=8.1",
     "symfony/framework-bundle": "^6.1",
     "pjpawel/magis": "0.1.*",
-    "symfony/yaml": "^6.1"
+    "symfony/yaml": "^6.1",
+    "symfony/twig-bridge": "^6.1"
   },
   "require-dev": {
     "phpunit/phpunit": "9.5.*"
