--- a/composer.json
+++ b/composer.json
@@ -16,12 +16,13 @@
   "require": {
     "php": ">=8.1",
     "symfony/framework-bundle": "^6.1",
-    "pjpawel/magis": "0.1.*",
+    "pjpawel/magis": "*",
     "symfony/yaml": "^6.1",
     "symfony/twig-bridge": "^6.1"
   },
   "require-dev": {
-    "phpunit/phpunit": "9.5.*"
+    "phpunit/phpunit": "9.5.*",
+    "phpstan/phpstan": "^1.9"
   },
   "autoload": {
     "psr-4": { "pjpawel\\Magis\\MagisBundle\\": "src" }
@@ -33,7 +34,12 @@
     }
   },
   "scripts": {
-    "test": "vendor/bin/phpunit .",
-    "coverage": "php -d xdebug.mode=coverage vendor\\bin\\phpunit --coverage-clover coverage.xml ."
+    "unit": "vendor/bin/phpunit --testsuite default",
+    "stan": "vendor/bin/phpstan analyse",
+    "coverage": "php -d xdebug.mode=coverage vendor\\bin\\phpunit --coverage-clover coverage.xml .",
+    "all": [
+      "@unit",
+      "@stan"
+    ]
   }
 }
