--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -36,7 +36,7 @@ jobs:
     # Docs: https://getcomposer.org/doc/articles/scripts.md
 
     - name: Run phpunit
-      run: composer test
+      run: composer unit
 
     - name: Run phpstan
       run: composer stan
